k8s-deploy/kubefate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubefate
  namespace: kube-fate
  labels:
    fate: kubefate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      fate: kubefate
  template:
    metadata:
      labels:
        fate: kubefate
    spec:
      serviceAccount: kubefate-admin
      containers:
        - image: federatedai/kubefate:v1.0.3
          imagePullPolicy: IfNotPresent
          name: kubefate
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: kube-fate
  labels:
    fate: mongo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      fate: mongo
  template:
    metadata:
      labels:
        fate: mongo
    spec:
      containers:
        - image: mongo
          imagePullPolicy: IfNotPresent
          name: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      restartPolicy: Always
      volumes:
        - name: mongo-data
          hostPath:
            path: /home/kubefate/mongodb/db
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kube-fate
  labels:
    fate: mongo
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
  selector:
    fate: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: kubefate
  namespace: kube-fate
  labels:
    fate: kubefate
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    fate: kubefate
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubefate
  namespace: kube-fate
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kubefate.dev.datahub.only.sap
      http:
        paths:
          - path: /
            backend:
              serviceName: kubefate
              servicePort: 8080
